@@ -1,17 +1,14 @@
 package com.dosomedev;
 
-import java.io.PrintStream;
 import java.util.concurrent.BrokenBarrierException;
 import java.util.concurrent.CyclicBarrier;
 
 public class CyclicBarrierExample implements Runnable {
 
-    public static final PrintStream OUT = System.out;
-
     @Override
     public void run() {
         CyclicBarrier barrier = new CyclicBarrier(3, () -> {
-            OUT.println("All workers have reached the checkpoint!");
+            IO.println("All workers have reached the checkpoint!");
         });
 
         for (int i = 1; i <= 3; i++) {
@@ -20,13 +17,13 @@ public class CyclicBarrierExample implements Runnable {
             new Thread(() -> {
                 try {
                     // Simulate some work.
-                    OUT.println("Worker " + Thread.currentThread().getId() + " start work.");
+                    IO.println("Worker " + Thread.currentThread().threadId() + " start work.");
                     Thread.sleep(sleepTimeMillis);
-                    OUT.println("Worker " + Thread.currentThread().getId() + " reaching the checkpoint.");
+                    IO.println("Worker " + Thread.currentThread().threadId() + " reaching the checkpoint.");
 
                     // Wait for all workers to group here.
                     barrier.await();
-                    OUT.println("Worker " + Thread.currentThread().getId() + " continuing work.");
+                    IO.println("Worker " + Thread.currentThread().threadId() + " continuing work.");
                 } catch (InterruptedException | BrokenBarrierException ex) {
                     System.err.println(ex.getMessage());
                 }
